@@ -4700,3 +4700,4 @@ EVP_CIPHER_do_all_ex                    4805	3_0_0	EXIST::FUNCTION:
 EVP_MD_do_all_ex                        4806	3_0_0	EXIST::FUNCTION:
 EVP_KEYEXCH_provider                    4807	3_0_0	EXIST::FUNCTION:
 OSSL_PROVIDER_available                 4808	3_0_0	EXIST::FUNCTION:
+X509_to_X509_REQ_ex                     4809	3_0_0	EXIST::FUNCTION:
